<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="AdsTagsStena" Id="{b26e0dbf-1c15-44fe-ba43-520f64bbb2fb}">
    <Declaration><![CDATA[TYPE AdsTagsStena :
STRUCT
	Settings: GreenMasterSettingsStena; // Settings for the GreenMaster unit
	Status: GreenMasterStatusStena; // Status for the GreenMaster unit
	Schedule1: TimeChannelSettings := (AllDays := TRUE, EN := TRUE, OffHour := 23, OffMinute := 59); // Operating schedule for the GreenMaster unit
	Schedule2: TimeChannelSettings; // Operating schedule for the GreenMaster unit
	Schedule3: TimeChannelSettings; // Operating schedule for the GreenMaster unit
	ScheduleFallback: TimeChannelSettings := (AllDays := TRUE, EN := TRUE, OnHour := 5, OnMinute := 30, OffHour := 20, OffMinute := 00); // Operating schedule for the GreenMaster unit on watchdog trig
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>